Fixes sidebar spacing between icons and text

--- a/src/app/side-nav/side-nav.component.scss
+++ b/src/app/side-nav/side-nav.component.scss
@@ -1,5 +1,5 @@
 mat-icon {
   color: rgba(0, 0, 0, 0.54);
-  padding-right: 20px;
+  margin-right: 20px;
   padding-left: 4px;
 }
